feat: add restricted mode for easier learning
